RESOLVED FIXED135076
Extend exception fuzzing to the LLInt
https://bugs.webkit.org/show_bug.cgi?id=135076
Summary Extend exception fuzzing to the LLInt
Filip Pizlo
Reported 2014-07-18 15:44:28 PDT
Patch forthcoming.
Attachments
the patch (22.65 KB, patch)
2014-07-18 15:45 PDT, Filip Pizlo
oliver: review+
Filip Pizlo
Comment 1 2014-07-18 15:45:56 PDT
Created attachment 235152 [details] the patch
WebKit Commit Bot
Comment 2 2014-07-18 15:48:04 PDT
Attachment 235152 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/llint/LLIntSlowPaths.cpp:153: __cce_exec is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] ERROR: Source/JavaScriptCore/runtime/ExceptionFuzz.h:36: The parameter name "exec" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/JavaScriptCore/CMakeLists.txt:384: No trailing spaces [whitespace/trailing] [5] Total errors found: 3 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 3 2014-07-22 11:29:00 PDT
Note You need to log in before you can comment on or make changes to this bug.