Extend exception fuzzing to the LLInt https://bugs.webkit.org/show_bug.cgi?id=135076

Reviewed by Oliver Hunt.


Source/JavaScriptCore:
* CMakeLists.txt:
* JavaScriptCore.vcxproj/JavaScriptCore.vcxproj:
* JavaScriptCore.xcodeproj/project.pbxproj:
* jit/JITOperations.cpp:
(JSC::numberOfExceptionFuzzChecks): Deleted.
* llint/LLIntSlowPaths.cpp:
(JSC::LLInt::setUpCall):
* runtime/CommonSlowPaths.cpp:
* runtime/ExceptionFuzz.cpp: Added.
(JSC::numberOfExceptionFuzzChecks):
(JSC::doExceptionFuzzing):
* runtime/ExceptionFuzz.h: Added.
(JSC::doExceptionFuzzingIfEnabled):

Tools:
* Scripts/jsc-stress-test-helpers/js-exception-fuzz:



Canonical link: https://commits.webkit.org/153065@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171350 268f45cc-cd09-0410-ab3c-d52691b4dbfc